# CavitySim

./: .gitattributes  .gitignore  .travis.yml  LICENSE  MANIFEST.in  Makefile  README.md  setup.cfg  setup.py
Functions/: ABCDroc.m  ABCDw.m  CavityPath.txt  CleanCavityPath.m  ConfigCavEnv.csv  ConfigCavEnv.m  ImportCavPath.m  InitialiseCavityPath.m  LensThinVacABCD.m  LensVThinABCD.m  MirrorFlatOrthogonal.m  PathFreeSpace.m  RadFromq.m  RayleighRangeW0.m  ReadCavPathFile.m  RestoreCavityPath.m
old-matlab/Functions/: ABCDroc.m  ABCDstability.m  ABCDtransform.m  ABCDw.m  CleanCavityPath.m  ImportLineSepSTR.m  InitialiseCavityPath.m  LensThinVacABCD.m  RadFromq.m  ReadCavityDesign.m
old-matlab/Optics/: LensNeg0100mm.csv  LensPos0100mm.csv  LensPos1000mm.csv
scripts/: GI3ScanAcrossContour.py  GI3ScanAcrossContour20191118.py  HolgerCavity.py  PatentPlots.py  PowerEnhancementLossScan.py  PowerEnhancementRelfectanceScan.py  PowerEnhancementScratch.py  WaistLoopScratch.py  gi3cavity20200106.py  gi3cavityScript.py  gi3cavityScript20191118.py  gi3cavityScript20191120.py  gi3cavityScript20191122.py  loopPlotTest.py  loopPlotTest20191118.py  q_test.py  scratch.py
scripts/CavityExamples/: ClockCavity.py  ConfocalCavity.py  ConvexConcaveCavity.py
scripts/Fitting/: FitTransmission.py  Octoscope_data_read.py  TestScope.csv  fit_transmission_with_cavitysim_reader.py
src/cavitysim/: _version.py  io.py  utils.py
tests/: conftest.py
tests/integration/: test_io.py
tests/test-data/: test_scope_1_column.csv  test_scope_2_columns.csv  test_scope_9_columns.csv  (+1 more)
(+3 files in other folders)
