[metadata]
description-file = README.md

[tool:pytest]
testpaths = tests

[versioneer]
VCS = git
style = pep440
versionfile_source = src/cavitysim/_version.py
versionfile_build = cavitysim/_version.py
tag_prefix = v
parentdir_prefix = cavitysim-

[flake8]
max-line-length = 88
ignore = E203, E266, E501, W503
